--- a/AssesswatchAPI/appsettings.json
+++ b/AssesswatchAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = DESKTOP-AUF9RDC;Database = monitoring_data;Integrated Security=false;TrustServercertificate=true;user id=Oteng;password=dea 12345"
+  }
 }
